Make modal buttons wrap correctly on mobile

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -371,6 +371,15 @@
                     vertical-align: middle;
                 }
             }
+            @media screen and (max-width: @browser_media-medium-screen) {
+                .cp-crowdfunding-modal nav {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 0.5rem;
+                }
+            }
         }
     }
 
